# tf_industrial_skills

./: README.md
gitlab/gitlab-pipeline-operations/: SKILL.md
nacos/nacos-query/: SKILL.md  pyproject.toml
nacos/nacos-query/scripts/: __init__.py  config.py  get_config_content.py  get_config_list.py  get_namespaces.py  get_service_detail.py  get_services.py  nacos_client.py
stock/pms-login/: SKILL.md  pms-login-config.json
stock/pms-login/scripts/: pms_login.py  read_pms_env.py  test_pms_login.py  test_read_pms_env.py
stock/query-industrial-order-data/: SKILL.md
stock/query-industrial-sellable-stock/: SKILL.md
stock/query-industrial-stock-detail/: SKILL.md
stock/query-industrial-stock-flow/: SKILL.md
stock/query-industrial-stock-reconcile/: SKILL.md  SKILL_BACK.md
stock/query-industrial-stock-redis/: SKILL.md
